@@ -1,17 +1,28 @@
 package my.stolyarov.springcourse.recipeapp.model;
 
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.ToString;
+import org.apache.commons.lang3.StringUtils;
+
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 
+@Data
+@EqualsAndHashCode
+@ToString
 public class Recipe {
     private String title;
+    @EqualsAndHashCode.Exclude
     private int cookingTime;
+    @EqualsAndHashCode.Exclude
     private final List<Ingredient> ingredients;
+    @EqualsAndHashCode.Exclude
     private final List<String> cookingSteps;
 
     public Recipe(String title, int cookingTime, List<Ingredient> ingredients, List<String> cookingSteps) {
-        if (title.isEmpty() || title.isBlank() || title == null) {
+        if (StringUtils.isBlank(title)) {
             throw new RuntimeException("Invalid input found for field \"title\"");
         } else {
             this.title = title;
@@ -32,52 +43,5 @@ public class Recipe {
 
     public Recipe() {
         this("Заготовка рецепта", 0,  new LinkedList<>(),  new LinkedList<>());
-    }
-
-    public String getTitle() {
-        return title;
-    }
-
-    public int getCookingTime() {
-        return cookingTime;
-    }
-
-    public List<Ingredient> getIngredients() {
-        return ingredients;
-    }
-
-    public List<String> getCookingSteps() {
-        return cookingSteps;
-    }
-
-    public void setTitle(String title) {
-        this.title = title;
-    }
-
-    public void setCookingTime(int cookingTime) {
-        this.cookingTime = cookingTime;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (o == null || getClass() != o.getClass()) return false;
-        Recipe recipe = (Recipe) o;
-        return Objects.equals(title, recipe.title);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hash(title);
-    }
-
-    @Override
-    public String toString() {
-        return "Recipe{" +
-                "title='" + title + '\'' +
-                ", cookingTime=" + cookingTime +
-                ", ingredients=" + ingredients +
-                ", cookingSteps=" + cookingSteps +
-                '}';
     }
 }
